# fastapi-appbuilder-project

./: README.md  pyproject.toml
fastapi_appbuilder_project/: config.py
fastapi_appbuilder_project/app/: __init__.py  views.py
flask_appbuilder_project/: README.md  config.py
flask_appbuilder_project/app/: models.py
flask_appbuilder_project/app/templates/: 404.html
