[tool.poetry]
name = "fastapi-appbuilder-project"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-AppBuilder = "^4.4.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
